--- a/portfolio-26466/frontend/.env
+++ b/portfolio-26466/frontend/.env
@@ -1,5 +1,5 @@
 # Environment variables for Frontend development
-REACT_APP_API_URL=https://api-26466.local
+REACT_APP_API_URL=/api
 REACT_APP_STUDENT_ID=26466
 REACT_APP_PROJECT_NAME=Portfolio CRUD System
 REACT_APP_VERSION=1.0.0
